# word2vec

./: .gitignore  CMakeLists.txt
scripts/: demo-word.sh
src/: distance.c  word2vec.c
